// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinearGenomeView genome view component renders one track, no blocks 1`] = `
<div
  class="makeStyles-root-1"
>
  <div
    class="makeStyles-linearGenomeView-2"
    style="display: grid; position: relative; grid-template-rows: [header] auto  [scale-bar] auto [track-foo] 20px [resize-foo] 3px; grid-template-columns: [controls] 100px [blocks] auto;"
  >
    <div
      class="makeStyles-headerBar-6"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton-15"
        tabindex="0"
        title="close this view"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
          >
            close
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        aria-controls="long-menu"
        aria-haspopup="true"
        aria-label="more"
        class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton-15"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root"
          >
            more_vert
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="makeStyles-emphasis-9"
      >
        <p
          class="MuiTypography-root makeStyles-viewName-11 MuiTypography-body1"
        />
      </div>
      <div
        class="makeStyles-spacer-7"
      />
      <div
        class="MuiPaper-root MuiPaper-elevation1 makeStyles-searchRoot-10 MuiPaper-rounded"
      >
        <form>
          <div
            class="MuiInputBase-root makeStyles-input-14"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input"
              placeholder="Enter location (e.g. chr1:1000..5000)"
              type="text"
              value=""
            />
          </div>
          <button
            aria-label="search"
            class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton-15"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <span
                aria-hidden="true"
                class="material-icons MuiIcon-root"
              >
                search
              </span>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </form>
      </div>
      <div
        class="MuiInputBase-root MuiInput-root MuiInput-underline"
      >
        <div
          aria-haspopup="true"
          aria-pressed="false"
          class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input MuiInputBase-inputSelect"
          id="select-refseq"
          role="button"
          tabindex="0"
        >
          <span>
            ​
          </span>
        </div>
        <input
          name="refseq"
          type="hidden"
          value="Select refSeq"
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSelect-icon"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
      <div
        class="ZoomControls-container-143"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <span
              aria-hidden="true"
              class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
            >
              zoom_out
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <span
          class="MuiSlider-root ZoomControls-slider-144"
        >
          <span
            class="MuiSlider-rail"
          />
          <span
            class="MuiSlider-track"
          />
          <input
            type="hidden"
            value="5.643856189774724"
          />
          <span
            aria-orientation="horizontal"
            aria-valuemax="5.643856189774724"
            aria-valuemin="5.643856189774724"
            aria-valuenow="5.643856189774724"
            class="MuiSlider-thumb"
            data-index="0"
            role="slider"
            tabindex="0"
          />
        </span>
        <button
          class="MuiButtonBase-root MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <span
              aria-hidden="true"
              class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
            >
              zoom_in
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="makeStyles-spacer-7"
      />
    </div>
    <div
      class="makeStyles-controls-3 makeStyles-viewControls-4"
      style="grid-row: scale-bar;"
    />
    <div
      class="Rubberband-rubberBandContainer-165"
      role="presentation"
    >
      <div
        class="ScaleBar-scaleBar-166"
        style="grid-column: blocks; grid-row: scale-bar; height: 32px;"
      />
    </div>
    <div
      class="makeStyles-controls-3 makeStyles-trackControls-5"
      style="grid-row: track-foo; grid-column: controls;"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root TrackControls-iconButton-199"
        tabindex="0"
        title="close this track"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
          >
            close
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiToggleButton-root TrackControls-toggleButton-200 MuiToggleButton-sizeSmall"
        style="min-width: 0;"
        tabindex="0"
        title="configure track"
        type="button"
        value="configure"
      >
        <span
          class="MuiToggleButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
          >
            settings
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <p
        class="MuiTypography-root TrackControls-trackName-197 MuiTypography-body1"
      >
        Foo Track
      </p>
      <span
        class="MuiTypography-root TrackControls-trackDescription-198 MuiTypography-caption MuiTypography-colorTextSecondary"
      />
    </div>
    <div
      class="TrackRenderingContainer-trackRenderingContainer-207"
      role="presentation"
      style="grid-row: track-foo; grid-column: blocks;"
    >
      <div
        class="Track-track-208"
        data-testid="track-testConfig"
        role="presentation"
      >
        <div
          class="TrackBlocks-trackBlocks-209"
          data-testid="Block"
        />
      </div>
    </div>
    <div
      class="TrackResizeHandle-dragHandle-212"
      role="presentation"
      style="grid-row: resize-foo; grid-column: span 2;"
    />
  </div>
</div>
`;

exports[`LinearGenomeView genome view component renders two tracks, two regions 1`] = `
<div
  class="makeStyles-root-1"
>
  <div
    class="makeStyles-linearGenomeView-2"
    style="display: grid; position: relative; grid-template-rows: [header] auto  [scale-bar] auto [track-foo] 20px [resize-foo] 3px [track-bar] 20px [resize-bar] 3px; grid-template-columns: [controls] 100px [blocks] auto;"
  >
    <div
      class="makeStyles-headerBar-6"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton-15"
        tabindex="0"
        title="close this view"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
          >
            close
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        aria-controls="long-menu"
        aria-haspopup="true"
        aria-label="more"
        class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton-15"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root"
          >
            more_vert
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="makeStyles-emphasis-9"
      >
        <p
          class="MuiTypography-root makeStyles-viewName-11 MuiTypography-body1"
        />
      </div>
      <div
        class="makeStyles-spacer-7"
      />
      <div
        class="MuiPaper-root MuiPaper-elevation1 makeStyles-searchRoot-10 MuiPaper-rounded"
      >
        <form>
          <div
            class="MuiInputBase-root makeStyles-input-14"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input"
              placeholder="Enter location (e.g. chr1:1000..5000)"
              type="text"
              value=""
            />
          </div>
          <button
            aria-label="search"
            class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton-15"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <span
                aria-hidden="true"
                class="material-icons MuiIcon-root"
              >
                search
              </span>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </form>
      </div>
      <div
        class="MuiInputBase-root MuiInput-root MuiInput-underline"
      >
        <div
          aria-haspopup="true"
          aria-pressed="false"
          class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input MuiInputBase-inputSelect"
          id="select-refseq"
          role="button"
          tabindex="0"
        >
          <span>
            ​
          </span>
        </div>
        <input
          name="refseq"
          type="hidden"
          value="Select refSeq"
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSelect-icon"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
      <div
        class="ZoomControls-container-143"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <span
              aria-hidden="true"
              class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
            >
              zoom_out
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <span
          class="MuiSlider-root ZoomControls-slider-144"
        >
          <span
            class="MuiSlider-rail"
          />
          <span
            class="MuiSlider-track"
          />
          <input
            type="hidden"
            value="5.643856189774724"
          />
          <span
            aria-orientation="horizontal"
            aria-valuemax="5.643856189774724"
            aria-valuemin="5.643856189774724"
            aria-valuenow="5.643856189774724"
            class="MuiSlider-thumb"
            data-index="0"
            role="slider"
            tabindex="0"
          />
        </span>
        <button
          class="MuiButtonBase-root MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <span
              aria-hidden="true"
              class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
            >
              zoom_in
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="makeStyles-spacer-7"
      />
    </div>
    <div
      class="makeStyles-controls-3 makeStyles-viewControls-4"
      style="grid-row: scale-bar;"
    />
    <div
      class="Rubberband-rubberBandContainer-165"
      role="presentation"
    >
      <div
        class="ScaleBar-scaleBar-166"
        style="grid-column: blocks; grid-row: scale-bar; height: 32px;"
      >
        <div
          class="Block-block-213 Block-leftBorder-214 Block-rightBorder-215"
          style="left: 0px; width: 100px;"
        >
          <svg
            height="32"
            width="100"
          >
            <line
              class="Ruler-majorTick-217"
              data-bp="-1"
              stroke="#555"
              stroke-width="1"
              x1="-1"
              x2="-1"
              y1="0"
              y2="6"
            />
            <line
              class="Ruler-minorTick-218"
              data-bp="19"
              stroke="#999"
              stroke-width="1"
              x1="19"
              x2="19"
              y1="0"
              y2="4"
            />
            <line
              class="Ruler-minorTick-218"
              data-bp="39"
              stroke="#999"
              stroke-width="1"
              x1="39"
              x2="39"
              y1="0"
              y2="4"
            />
            <line
              class="Ruler-minorTick-218"
              data-bp="59"
              stroke="#999"
              stroke-width="1"
              x1="59"
              x2="59"
              y1="0"
              y2="4"
            />
            <line
              class="Ruler-minorTick-218"
              data-bp="79"
              stroke="#999"
              stroke-width="1"
              x1="79"
              x2="79"
              y1="0"
              y2="4"
            />
            <line
              class="Ruler-majorTick-217"
              data-bp="99"
              stroke="#555"
              stroke-width="1"
              x1="99"
              x2="99"
              y1="0"
              y2="6"
            />
            <line
              class="Ruler-minorTick-218"
              data-bp="119"
              stroke="#999"
              stroke-width="1"
              x1="119"
              x2="119"
              y1="0"
              y2="4"
            />
            <text
              class="Ruler-majorTickLabel-216"
              dominant-baseline="hanging"
              style="font-size: 11px;"
              x="-4"
              y="7"
            >
              0
            </text>
            <text
              class="Ruler-majorTickLabel-216"
              dominant-baseline="hanging"
              style="font-size: 11px;"
              x="96"
              y="7"
            >
              100
            </text>
          </svg>
        </div>
        <div
          class="ScaleBar-refLabel-167"
        >
          ctgA
        </div>
      </div>
    </div>
    <div
      class="makeStyles-controls-3 makeStyles-trackControls-5"
      style="grid-row: track-foo; grid-column: controls;"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root TrackControls-iconButton-199"
        tabindex="0"
        title="close this track"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
          >
            close
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiToggleButton-root TrackControls-toggleButton-200 MuiToggleButton-sizeSmall"
        style="min-width: 0;"
        tabindex="0"
        title="configure track"
        type="button"
        value="configure"
      >
        <span
          class="MuiToggleButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
          >
            settings
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <p
        class="MuiTypography-root TrackControls-trackName-197 MuiTypography-body1"
      >
        Foo Track
      </p>
      <span
        class="MuiTypography-root TrackControls-trackDescription-198 MuiTypography-caption MuiTypography-colorTextSecondary"
      />
    </div>
    <div
      class="TrackRenderingContainer-trackRenderingContainer-207"
      role="presentation"
      style="grid-row: track-foo; grid-column: blocks;"
    >
      <div
        class="Track-track-208"
        data-testid="track-testConfig"
        role="presentation"
      >
        <div
          class="TrackBlocks-trackBlocks-209"
          data-testid="Block"
        >
          <div
            class="Block-block-213 Block-leftBorder-214 Block-rightBorder-215"
            style="left: 0px; width: 100px;"
          >
            <div
              class="Component-blockMessage-223"
            >
              region assembly does not match track assembly
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="TrackResizeHandle-dragHandle-212"
      role="presentation"
      style="grid-row: resize-foo; grid-column: span 2;"
    />
    <div
      class="makeStyles-controls-3 makeStyles-trackControls-5"
      style="grid-row: track-bar; grid-column: controls;"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root TrackControls-iconButton-199"
        tabindex="0"
        title="close this track"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
          >
            close
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiToggleButton-root TrackControls-toggleButton-200 MuiToggleButton-sizeSmall"
        style="min-width: 0;"
        tabindex="0"
        title="configure track"
        type="button"
        value="configure"
      >
        <span
          class="MuiToggleButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
          >
            settings
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <p
        class="MuiTypography-root TrackControls-trackName-197 MuiTypography-body1"
      >
        Bar Track
      </p>
      <span
        class="MuiTypography-root TrackControls-trackDescription-198 MuiTypography-caption MuiTypography-colorTextSecondary"
      />
    </div>
    <div
      class="TrackRenderingContainer-trackRenderingContainer-207"
      role="presentation"
      style="grid-row: track-bar; grid-column: blocks;"
    >
      <div
        class="Track-track-208"
        data-testid="track-testConfig2"
        role="presentation"
      >
        <div
          class="TrackBlocks-trackBlocks-209"
          data-testid="Block"
        >
          <div
            class="Block-block-213 Block-leftBorder-214 Block-rightBorder-215"
            style="left: 0px; width: 100px;"
          >
            <div
              class="Component-blockMessage-223"
            >
              region assembly does not match track assembly
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="TrackResizeHandle-dragHandle-212"
      role="presentation"
      style="grid-row: resize-bar; grid-column: span 2;"
    />
  </div>
</div>
`;

exports[`LinearGenomeView genome view component renders with an empty model 1`] = `
<div
  class="makeStyles-root-1"
>
  <div
    class="makeStyles-linearGenomeView-2"
    style="display: grid; position: relative; grid-template-rows: [header] auto  [scale-bar] auto; grid-template-columns: [controls] 100px [blocks] auto;"
  >
    <div
      class="makeStyles-headerBar-6"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton-15"
        tabindex="0"
        title="close this view"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
          >
            close
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        aria-controls="long-menu"
        aria-haspopup="true"
        aria-label="more"
        class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton-15"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root"
          >
            more_vert
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="makeStyles-emphasis-9"
      >
        <p
          class="MuiTypography-root makeStyles-viewName-11 MuiTypography-body1"
        />
      </div>
      <div
        class="makeStyles-spacer-7"
      />
      <div
        class="MuiPaper-root MuiPaper-elevation1 makeStyles-searchRoot-10 MuiPaper-rounded"
      >
        <form>
          <div
            class="MuiInputBase-root makeStyles-input-14"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input"
              placeholder="Enter location (e.g. chr1:1000..5000)"
              type="text"
              value=""
            />
          </div>
          <button
            aria-label="search"
            class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton-15"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <span
                aria-hidden="true"
                class="material-icons MuiIcon-root"
              >
                search
              </span>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </form>
      </div>
      <div
        class="MuiInputBase-root MuiInput-root MuiInput-underline"
      >
        <div
          aria-haspopup="true"
          aria-pressed="false"
          class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input MuiInputBase-inputSelect"
          id="select-refseq"
          role="button"
          tabindex="0"
        >
          <span>
            ​
          </span>
        </div>
        <input
          name="refseq"
          type="hidden"
          value="Select refSeq"
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSelect-icon"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
      <div
        class="ZoomControls-container-143"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <span
              aria-hidden="true"
              class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
            >
              zoom_out
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <span
          class="MuiSlider-root ZoomControls-slider-144"
        >
          <span
            class="MuiSlider-rail"
          />
          <span
            class="MuiSlider-track"
          />
          <input
            type="hidden"
            value="5.643856189774724"
          />
          <span
            aria-orientation="horizontal"
            aria-valuemax="5.643856189774724"
            aria-valuemin="5.643856189774724"
            aria-valuenow="5.643856189774724"
            class="MuiSlider-thumb"
            data-index="0"
            role="slider"
            tabindex="0"
          />
        </span>
        <button
          class="MuiButtonBase-root MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <span
              aria-hidden="true"
              class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
            >
              zoom_in
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="makeStyles-spacer-7"
      />
    </div>
    <div
      class="makeStyles-controls-3 makeStyles-viewControls-4"
      style="grid-row: scale-bar;"
    />
    <div
      class="Rubberband-rubberBandContainer-165"
      role="presentation"
    >
      <div
        class="ScaleBar-scaleBar-166"
        style="grid-column: blocks; grid-row: scale-bar; height: 32px;"
      />
    </div>
  </div>
</div>
`;
